[ADD] adding js,css,diy tutorials and more ui fixes

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -8,7 +8,7 @@
   --ui-container: 1920px;
 }
 
-.dark{
+.dark {
   --ui-bg: #030712;
 }
 
@@ -34,9 +34,15 @@ button {
 
 ::-webkit-scrollbar {
   width: 8px;
-  background: #0f172a;
+  background: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #1e3263;
+  background: #ccc;
+}
+
+.dark {
+  ::-webkit-scrollbar-thumb {
+    background: #1e3263;
+  }
 }
