[UPDATE] adding micro animation and removing unecessary element

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -40,6 +40,7 @@ button {
 
 ::-webkit-scrollbar-thumb {
   background: #ccc;
+  cursor: grab;
 }
 
 .dark {
@@ -48,7 +49,7 @@ button {
   }
 }
 
-.tooltip {
+[data-tooltip] {
   position: relative;
   white-space: nowrap;
 
